TransforMiiX (TM)
(C) Copyright 1999, 2000, The MITRE Corporation, Keith Visco, et al. All rights reserved.


Build 20000618
-- Added changes from Olivier Gerardin for improved
   handling of template parameters

Build 20000523

-- Added fix from Marc Schefer regarding OR expressions
   - If the left hand expression was false...the right
     hand expression was not evaluated (which should
     only happen if the expression is an AND expr).

-- Added support for document() function
   - implemented by Olivier Gerardin
   - The second argument to the function is not yet supported

-- Added support for lang() function
   - implemented by Marina Mechtcherikova

-- Fixed bug with doing xsl:copy-of on a document node.
   - reported by Olivier Gerardin


Build 20000420

-- Fixed document base issue with transfromiix.cpp (Nathan)
   - When an XSLT stylesheet is specified on the command line
     the document base was still defaulting to the XML document,
     instead of the stylesheet

-- Fixed bug in namespace-uri() function [NodeSetFunctionCall.cpp] - Marina
   - If an expression was passed as an argument to the function,
     which evaluated to an empty NodeSet, the context node was being
     used, which is incorrect. We now just return an empty string.

-- Fixed bug in PathExpr::matches (Marina)
   - expressions such as "foo//bar" would not always match
     properly if more than one node existed in the final
     set of "matching context nodes" (so basically if foo
     was not the root element).


Build 20000419

-- Added the generate-id function
-- Added XPath Extension Function support

Build 20000413

-- Added some bug fixes from Marina
   -- fixed parsing of multiple predicates
   -- added support to handle attribute-set recursion
   -- added appropriate calls to handle use-attribute-sets on xsl:copy

Build 20000412

-- Fixed the following Axes names in Names.cpp so that
   the are compatible with the XSLT 1.0 recommendation (Marina)